add path await and async

--- a/JavaScriptES6/package.json
+++ b/JavaScriptES6/package.json
@@ -6,6 +6,7 @@
   "devDependencies": {
     "@babel/cli": "^7.8.3",
     "@babel/core": "^7.8.3",
+    "@babel/polyfill": "^7.8.3",
     "@babel/preset-env": "^7.8.3",
     "babel-loader": "^8.0.6",
     "webpack": "^4.41.5",
@@ -14,5 +15,8 @@
   },
   "scripts": {
     "dev": "webpack-dev-server --mode-development "
+  },
+  "dependencies": {
+    "@babel/plugin-transform-async-to-generator": "^7.8.3"
   }
 }
